@@ -279,7 +279,7 @@ class HsailLexer(RegexLexer):
                 'enabledetectexceptions', 'maxdynamicgroupsize', 'maxflatgridsize',
                 'maxflatworkgroupsize', 'requireddim', 'requiredgridsize',
                 'requiredworkgroupsize', 'requirenopartialworkgroups'),
-                   suffix=r'\b'), Keyword),
+                suffix=r'\b'), Keyword),
 
             # instructions
             (roundingMod, Keyword),
@@ -411,7 +411,7 @@ class LlvmLexer(RegexLexer):
                 'malloc', 'alloca', 'free', 'load', 'store', 'getelementptr',
                 'extractelement', 'insertelement', 'shufflevector', 'getresult',
                 'extractvalue', 'insertvalue', 'atomicrmw', 'cmpxchg', 'fence'),
-                   suffix=r'\b'), Keyword),
+                suffix=r'\b'), Keyword),
 
             # Types
             (words(('void', 'half', 'float', 'double', 'x86_fp80', 'fp128',
@@ -421,6 +421,7 @@ class LlvmLexer(RegexLexer):
             (r'i[1-9]\d*', Keyword)
         ]
     }
+
 
 class NasmLexer(RegexLexer):
     """
