@@ -13,7 +13,7 @@ import re
 
 from pygments.lexer import RegexLexer, bygroups, include, this, using, words
 from pygments.token import Comment, Keyword, Literal, Name, Number, \
-     Operator, Punctuation, String, Text
+    Operator, Punctuation, String, Text
 
 __all__ = ['BnfLexer', 'AbnfLexer', 'JsgfLexer']
 
